--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+form{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+form input{
+  outline: none;
+  height: 1.5rem;
+  padding-left: 10px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  background: none;
+  animation: ease-in-out;
+  transition: 150ms;
+}
+
+form input:hover{
+  background: #ffffff10;
+  border: 1px solid #a0a0a0;
+}
